# telegram-assistant

./: .gitignore  Cargo.toml  flake.nix  pre-commit.nix  service.nix  treefmt.nix
.github/workflows/: nix-flake-check.yaml
src/: main.rs  trimming.rs
src/app/input/: chat.rs
src/app/output/: chat_client.rs  llm_client.rs  mod.rs  repo.rs  trimming.rs
src/chat/: mod.rs  model.rs  openai.rs  repo.rs
src/domain/: chat.rs  mod.rs  prompts.rs  user.rs
src/domain/snapshots/: telegram_assistant__domain__prompts__tests__prompt_snapshot.snap
src/infra/output/: mem_repo.rs  mod.rs  openai_llm_client.rs  reset_trimming.rs
src/infra/output/telegram/: client.rs  user.rs
templates/: system_prompt.md
