[package]
name = "llm-telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
async-openai = { version = "0.29" }
serde = { version = "1", features = ["derive"] }
dotenvy = { version = "0.15" }
anyhow = { version = "1" }
envy = { version = "0.4" }
dptree = { version = "0.5" }
