[package]
name = "telegram-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14" }
jiff = { version = "0.2" }
teloxide = { version = "0.17", default-features = false, features = [
  "macros",
  "rustls",
  "ctrlc_handler",
] }
tokio = { version = "1.38.0", features = ["full"] }
async-openai = { version = "0.29" }
serde = { version = "1", features = ["derive"] }
dotenvy = { version = "0.15" }
anyhow = { version = "1" }
envy = { version = "0.4" }
dptree = { version = "0.5" }
nestify = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "2", features = ["constructor"] }
dynosaur = { version = "0.3" }
trait-variant = { version = "0.1" }
isolang = { version = "2", features = ["english_names"] }
itertools = { version = "0.14" }
bon = { version = "3" }

[dev-dependencies]
insta = { version = "1" }
